--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.2"
+    "@astrojs/preact": "^3.5.3",
+    "@astrojs/react": "^3.6.2",
+    "astro": "^4.15.2",
+    "preact": "^10.24.0"
   }
 }
