--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/preact": "^3.5.3",
     "@astrojs/react": "^3.6.2",
+    "@astrojs/rss": "^4.0.7",
     "astro": "^4.15.2",
     "preact": "^10.24.0"
   }
